--- a/css/products-styles.css
+++ b/css/products-styles.css
@@ -1,11 +1,14 @@
+
 #filter-select{
   background-color: #ffffff!important;
   width: 7em;
   
 }
 
-#product-list-container, #content-functions{
-  width: 80%;
+
+
+#content-functions{
+  width: 90%;
   margin: 0 10% 1% 10%;
 }
 
@@ -18,8 +21,7 @@
 }
 
 #filter-container{
-  width: 90%;
-  margin: 0 10% 0 10%;
+  width: 100%;
   align-items: flex-end;
 }
 
